# flexiber

./: CHANGELOG.md  Cargo.toml  README.md  bacon.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  docs.yml
derive/: Cargo.toml
derive/src/: decodable.rs  encodable.rs  lib.rs
flexiber/: all.html  derive.Decodable.html  derive.Encodable.html  enum.Class.html  enum.ErrorKind.html  index.html  macro.debug.html  macro.debug_now.html  macro.error.html  macro.error_now.html  macro.info.html  macro.info_now.html  macro.log.html  macro.log_now.html  macro.trace.html  macro.trace_now.html  macro.try_debug.html  macro.try_debug_now.html  macro.try_error.html  macro.try_error_now.html  macro.try_info.html  macro.try_info_now.html  macro.try_log_now.html  macro.try_trace.html  macro.try_trace_now.html  macro.try_warn.html  macro.try_warn_now.html  macro.warn.html  macro.warn_now.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html  struct.Error.html  struct.Length.html  struct.SimpleTag.html  struct.Slice.html  struct.Tag.html  struct.TaggedValue.html  trait.Container.html  trait.Decodable.html  (+5 more)
flexiber_derive/: all.html  derive.Decodable.html  derive.Encodable.html  index.html
search.desc/flexiber/: flexiber-desc-0-.js
search.desc/syn/: syn-desc-0-.js
src/: decoder.rs  encoder.rs  error.rs  header.rs  length.rs  lib.rs  nested.rs  simpletag.rs  slice.rs  tag.rs  tagged.rs  tagged_slice.rs  traits.rs
src/flexiber/: decoder.rs.html  encoder.rs.html  error.rs.html  header.rs.html  length.rs.html  lib.rs.html  simpletag.rs.html  slice.rs.html  tag.rs.html  tagged.rs.html  traits.rs.html
src/flexiber_derive/: decodable.rs.html  encodable.rs.html  lib.rs.html
src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  drops.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  gen_helper.rs.html  generics.rs.html  group.rs.html  ident.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  lookahead.rs.html  mac.rs.html  macros.rs.html  op.rs.html  parse.rs.html  parse_macro_input.rs.html  parse_quote.rs.html  path.rs.html  print.rs.html  punctuated.rs.html  sealed.rs.html  span.rs.html  spanned.rs.html  thread.rs.html  token.rs.html  tt.rs.html  ty.rs.html  verbatim.rs.html
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.GenericArgument.html  enum.GenericParam.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  macro.bracketed.html  macro.custom_keyword.html  macro.custom_punctuation.html  macro.parenthesized.html  macro.parse_quote.html  macro.parse_quote_spanned.html  sidebar-items.js  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.Attribute.html  struct.BareFnArg.html  struct.Binding.html  (+99 more)
syn/buffer/: index.html  struct.Cursor.html  struct.TokenBuffer.html
syn/ext/: index.html  trait.IdentExt.html
syn/parse/: index.html  struct.Error.html  struct.Lookahead1.html  struct.Nothing.html  struct.ParseBuffer.html  struct.StepCursor.html  trait.Parse.html  trait.Parser.html  type.ParseStream.html  type.Result.html
syn/punctuated/: enum.Pair.html  index.html  struct.IntoIter.html  struct.IntoPairs.html  struct.Iter.html  struct.IterMut.html  struct.Pairs.html  struct.PairsMut.html  struct.Punctuated.html
syn/spanned/: index.html  trait.Spanned.html
syn/token/: index.html  struct.Abstract.html  struct.Add.html  struct.AddEq.html  struct.And.html  struct.AndAnd.html  struct.AndEq.html  struct.As.html  struct.Async.html  struct.At.html  struct.Auto.html  struct.Await.html  struct.Bang.html  struct.Become.html  struct.Box.html  struct.Brace.html  struct.Bracket.html  struct.Break.html  struct.Caret.html  struct.CaretEq.html  struct.Colon.html  struct.Colon2.html  struct.Comma.html  struct.Const.html  struct.Continue.html  struct.Crate.html  struct.Default.html  (+78 more)
synstructure/: enum.BindStyle.html  struct.BindingInfo.html  struct.Structure.html  struct.VariantAst.html  struct.VariantInfo.html  trait.MacroResult.html
tests/: derive.rs
(+167 files in other folders)
