[package]
name = "simple-tlv"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>", "RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
description = "Encoding and decoding of SIMPLE-TLV as described in ISO 7816-4, without allocations."
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "no_std", "serialization"]
readme = "README.md"

[dependencies]
simple-tlv_derive = { version = "0.1", optional = true, path = "derive" }

[dependencies.heapless]
version = "0.6.0"
optional = true

[features]
alloc = []
derive = ["simple-tlv_derive"]
std = ["alloc"]
