[package]
name = "flexiber"
version = "0.1.1"
authors = ["Nicolas Stalder <n@stalder.io>", "RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2021"
description = "Encoding and decoding of BER-TLV as described in ISO 7816-4, without allocations."
repository = "https://github.com/trussed-dev/flexiber"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "no_std", "serialization"]
readme = "README.md"
documentation = "https://docs.rs/flexiber"

[dependencies]
delog = "0.1.0"
flexiber_derive = { version = "0.1", optional = true, path = "derive" }

[dependencies.heapless]
version = "0.7.0"
optional = true

[dev-dependencies]
hex-literal = "0.3.1"

[features]
alloc = []
derive = ["flexiber_derive"]
std = ["alloc"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
