[package]
name = "flexiber_derive"
version = "0.1.3"
authors = ["Nicolas Stalder <n@stalder.io>", "RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2021"
description = "Procedural macros to derive `Decodable` and `Encodable` from `flexiber`."
repository = "https://github.com/nickray/flexiber/tree/main/derive"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
synstructure = "0.13"
